# Bicycle_Project

./: Default.perspective  README.txt
bicycle_controllers/: CMakeLists.txt  package.xml
bicycle_controllers/config/: baseline_parameters.yaml  straight_running.yaml  straight_running_slow.yaml
bicycle_controllers/include/: pid_controller.hh
bicycle_controllers/launch/: baseline.launch  straight_running_LQR.launch  straight_running_LQR_ramps.launch  straight_running_LQR_slow.launch
bicycle_controllers/scripts/: apply_joint_effort.py  bicycle_commander.py  bicycle_controller.py  controller.py  disturbance_generator.py  flywheel_controller.py  gazebo_srv_test.py  lqr_controller.py  set_torque.py  set_velocity.py  teleop.py  temp.py
bicycle_controllers/src/: control_test.cpp  pid_controller.cpp
bicycle_description/: CMakeLists.txt  README.txt  package.xml
bicycle_description/launch/: baseline.launch  baseline_rviz.launch  bicycle_rviz.launch  bicycle_rviz_test.launch  gazebo_baseline.launch  gazebo_baseline_flywheel.launch  gazebo_baseline_gyro.launch  gazebo_basic.launch
bicycle_description/rviz/: baseline.rviz  bicycle_default_rviz.rviz  default.rviz  rviz_empty.rviz  urdf.rviz
bicycle_description/scripts/: joint_state_publisher.py  static_tf.py
bicycle_description/urdf/: baseline.gazebo  baseline_flywheel.urdf.xacro  baseline_gyro.urdf.xacro  baseline_model.urdf.xacro  baseline_model_rviz.urdf.xacro  basic.gazebo  basic_collision_model.urdf.xacro  colors.xacro  flywheel.gazebo  gyro.gazebo  temp
bicycle_description/worlds/: playground.world
bicycle_gazebo_plugins/: CMakeLists.txt  package.xml
bicycle_gazebo_plugins/config/: parameters.yaml
bicycle_gazebo_plugins/include/: bicycle_plugin.hh
bicycle_gazebo_plugins/launch/: bicycle_plugin.launch  simple_control.launch  test_plugin.launch
bicycle_gazebo_plugins/src/: bicycle_plugin.cpp  temp.cpp
bicycle_gazebo_plugins/worlds/: hello.world  test_plugin.world
bicycle_msgs/: CMakeLists.txt  package.xml
bicycle_msgs/msg/: BicycleCmd.msg  BicycleStates.msg  bicycle_cmd.msg  joint_torque.msg  joint_vel.msg
bicycle_worlds/: CMakeLists.txt  SingleTrackVehicle_Simple  package.xml
bicycle_worlds/meshes/: diskV1_1x15.stl  disk_ramp_p3x15.stl  (+1 more)
(+21 files in other folders)
